
  [ Michael Biebl ]
  * Use dpkg-vendor instead of lsb_release.
  * Stop installing gtk-doc API documentation. It has  been removed upstream.
    - Update debian/libgdu-dev.install.
    - Drop Conflicts/Replaces from libgdu-dev as it no longer necessary.
  * Bump debhelper compatibility level to 8. Update Build-Depends accordingly.
  * Bump Standards-Version to 3.9.2. No further changes.

 -- Michael Biebl <biebl@debian.org>  Thu, 19 May 2011 22:09:31 +0200

gnome-disk-utility (2.30.1-2) unstable; urgency=low

  * Add 00git-palimpsest-small-screens.patch: Add scrollbars to the right pane
    if the window is smaller than the contents. This makes palimpsest working
    on small screens. (Closes: #589502, LP: #414107, GNOME #594088)
  * debian/control: Bump Standards-Version to 3.9.1 (no changes necessary).
  * Convert source package to "3.0 (quilt)" format.

 -- Martin Pitt <mpitt@debian.org>  Thu, 19 Aug 2010 14:55:27 +0200

gnome-disk-utility (2.30.1-1) unstable; urgency=low

  * New upstream release:
    - Fix crash in gdu_adapter_get_object_path.
    - Fix broken rendering for some part of application.
    - Translation updates.

 -- Michael Biebl <biebl@debian.org>  Sun, 04 Apr 2010 23:58:54 +0200

gnome-disk-utility (2.30.0-1) unstable; urgency=low

  * New upstream release.
    - Various translation updates.
    - Fix theming for the volume grid widget.
    - Don't include non-working Help menu item. (Closes: #573910)
    - Initial support for loop devices.
  * debian/patches/01_delay_autostart.patch
    - Don't patch data/gdu-notification-daemon.desktop.in. It's an
      autogenerated file and will be overwritten anyway.
  * Update symbols files for new API additions.

 -- Michael Biebl <biebl@debian.org>  Tue, 16 Mar 2010 14:56:07 +0100

gnome-disk-utility (2.29.90-2) experimental; urgency=low

  [ Michael Biebl ]
  * debian/libgdu-gtk0.symbols
    - Bump symbol versions to 2.29.90 for all symbols that were added after
      version 2.28.1.