@@ -17,6 +17,11 @@ gnome-disk-utility (2.32.0-1) UNRELEASED; urgency=low
     - Drop Conflicts/Replaces from libgdu-dev as it no longer necessary.
   * Bump debhelper compatibility level to 8. Update Build-Depends accordingly.
   * Bump Standards-Version to 3.9.2. No further changes.
+  * Switch from cdbs to dh
+    - Drop Build-Depends on cdbs.
+    - Convert debian/rules to use dh.
+    - Override dh_auto_test to disable test suite.
+    - Add debian/gnome-disk-utility.docs.
 
  -- Michael Biebl <biebl@debian.org>  Thu, 19 May 2011 22:09:31 +0200
 
